--- a/source/less/blocks/address-text.less
+++ b/source/less/blocks/address-text.less
@@ -9,4 +9,9 @@
     margin: 0.5em 0;
     text-align: right;
   }
+
+  @media (min-width: @desktop-width) {
+    flex-grow: 1;
+    text-align: left;
+  }
 }
