--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -67,6 +67,7 @@
   justify-content: space-between;
   align-items: center;
   @media (min-width: @tablet-width) {
+    padding: 0;
     justify-content: flex-end;
   }
 }
@@ -104,5 +105,5 @@
 }
 
 .page-footer__html-academy-logo-image {
-
+  display: block;
 }
