--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -31,11 +31,14 @@
   }
 
   @media (min-width: @desktop-width) {
+    position: relative;
+    z-index: 2;
     padding: 56px 80px;
     width: 565px;
     margin: 0;
     margin-right: auto;
     background-color: @white;
+    gap: 87px;
   }
 }
 
@@ -50,9 +53,14 @@
   max-width: 139px;
 
   @media (min-width: @tablet-width) {
-    max-width: 170px;
+    width: 25%;
+    max-width: auto;
     font-size: 20px;
     line-height: 26px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-grow: 1;
   }
 }
 
@@ -60,9 +68,14 @@
   max-width: 139px;
 
   @media (min-width: @tablet-width) {
-    max-width: 160px;
+    width: 25%;
+    max-width: auto;
     font-size: 16px;
     line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-grow: 1;
   }
 }
 
@@ -73,7 +86,7 @@
   width: 100%;
 
   @media (min-width: @desktop-width) {
-    z-index: -1;
+    z-index: 1;
     position: absolute;
     height: 100%;
     width: 100%;
