--- a/7/css/style.css
+++ b/7/css/style.css
@@ -775,7 +775,6 @@ a {
 @media (min-width: 768px) {
   .principles-of-work__item {
     margin: 0;
-    max-width: 250px;
     min-height: 280px;
     padding-top: 34px;
     background-repeat: no-repeat;
@@ -785,13 +784,11 @@ a {
 @media (min-width: 768px) {
   .principles-of-work__item--one {
     background-image: url("../img/one.svg");
-    background-position: 118px 34px;
   }
 }
 @media (min-width: 768px) {
   .principles-of-work__item--two {
     background-image: url("../img/two.svg");
-    background-position: 111px 34px;
   }
 }
 @media (min-width: 768px) {
@@ -813,7 +810,6 @@ a {
   .principles-of-work__description {
     flex-direction: column;
     align-items: flex-start;
-    width: 245px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -1218,11 +1214,14 @@ a {
 }
 @media (min-width: 1440px) {
   .location__wrapper {
+    position: relative;
+    z-index: 2;
     padding: 56px 80px;
     width: 565px;
     margin: 0;
     margin-right: auto;
     background-color: #ffffff;
+    gap: 87px;
   }
 }
 .location__invitation {
@@ -1237,9 +1236,15 @@ a {
 }
 @media (min-width: 768px) {
   .location__invitation {
-    max-width: 170px;
+    width: 25%;
+    max-width: auto;
     font-size: 20px;
     line-height: 26px;
+  }
+}
+@media (min-width: 1440px) {
+  .location__invitation {
+    flex-grow: 1;
   }
 }
 .location__address {
@@ -1247,9 +1252,15 @@ a {
 }
 @media (min-width: 768px) {
   .location__address {
-    max-width: 160px;
+    width: 25%;
+    max-width: auto;
     font-size: 16px;
     line-height: 20px;
+  }
+}
+@media (min-width: 1440px) {
+  .location__address {
+    flex-grow: 1;
   }
 }
 .location__map {
@@ -1260,7 +1271,7 @@ a {
 }
 @media (min-width: 1440px) {
   .location__map {
-    z-index: -1;
+    z-index: 1;
     position: absolute;
     height: 100%;
     width: 100%;
@@ -1279,6 +1290,12 @@ a {
   .address-text__paragraph {
     margin: 0.5em 0;
     text-align: right;
+  }
+}
+@media (min-width: 1440px) {
+  .address-text__paragraph {
+    flex-grow: 1;
+    text-align: left;
   }
 }
 .application-form {
@@ -1768,7 +1785,6 @@ a {
 }
 .application-form__button {
   width: 100%;
-  margin-bottom: 21px;
 }
 .application-form__note {
   display: block;
@@ -2477,6 +2493,7 @@ a {
 }
 @media (min-width: 768px) {
   .page-footer__html-academy-logo-wrapper {
+    padding: 0;
     justify-content: flex-end;
   }
 }
@@ -2507,5 +2524,8 @@ a {
 }
 .page-footer__html-academy-logo:active {
   opacity: 30%;
+}
+.page-footer__html-academy-logo-image {
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
