--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -3,11 +3,12 @@
   margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 0;
     padding-bottom: 76px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 86px;
+    padding-bottom: 82px;
   }
 }
 
@@ -19,10 +20,10 @@
 }
 
 .additional-products__title-wrapper {
-  margin-bottom: 36px;
+  margin-bottom: 32px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 80px;
+    margin-bottom: 78px;
   }
 
   @media (min-width: @desktop-width) {
@@ -46,9 +47,12 @@
   @media (min-width: @tablet-width) {
     padding: 0 36px;
     margin-bottom: 80px;
-
     font-size: 36px;
     line-height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: -36px;
   }
 }
 
@@ -75,7 +79,7 @@
 
 .additional-products__gift {
   position: relative;
-  padding: 187px 60px 42px;
+  padding: 187px 55px 43px;
 
   font-size: 16px;
   line-height: 20px;
@@ -94,7 +98,7 @@
 
   @media (min-width: @tablet-width) {
     background-image: url("../img/gift-background-tablet.jpg");
-    padding: 71px 124px 69px 422px;
+    padding: 70px 124px 69px 422px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/gift-background-tablet-2x.jpg");
@@ -147,11 +151,13 @@
 }
 
 .additional-products__gift-paragraph {
+  margin: 0;
   @media (min-width: @tablet-width) {
     margin-left: auto;
     text-align: left;
     width: 161px;
   }
+
   @media(min-width: @desktop-width) {
     text-align: center;
   }
