--- a/source/less/blocks/navigation-list.less
+++ b/source/less/blocks/navigation-list.less
@@ -20,25 +20,25 @@
   border-top: 1px solid @gray-2;
 
   @media (min-width: @tablet-width) {
-      margin-left: 34px;
+      margin-left: 37px;
       border: none;
   }
 }
 
 .navigation-list__link {
   display: block;
-  padding: 24px 60px;
+  padding: 23px 60px;
 
   color: inherit;
   text-decoration: none;
   text-align: center;
 
   @media (min-width: @tablet-width) {
-      padding: 10px 0;
+      padding: 18px 0 10px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 8px 0;
+    padding: 12px 0;
   }
 
   &:hover,
