--- a/source/less/blocks/address-text.less
+++ b/source/less/blocks/address-text.less
@@ -1,17 +1,18 @@
 .address-text {
   font-style: normal;
+  line-height: 20px;
 }
 
 .address-text__paragraph {
   margin: 0;
 
   @media (min-width: @tablet-width) {
-    margin: 0.5em 0;
+    margin-bottom: 1em;
     text-align: right;
   }
 
   @media (min-width: @desktop-width) {
-    flex-grow: 1;
+    margin-bottom: 0;
     text-align: left;
   }
 }
