--- a/source/less/blocks/application-form.less
+++ b/source/less/blocks/application-form.less
@@ -9,6 +9,14 @@
   line-height: 18px;
   color: @dark-gray;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 34px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 44px;
+  }
 }
 
 .application-form__main-title {
@@ -17,9 +25,12 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 54px;
-
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 57px;
   }
 }
 
@@ -30,7 +41,6 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 66px;
-
     font-size: 20px;
     line-height: 30px;
   }
@@ -52,7 +62,7 @@
 
 .application-form__personal {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 23px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -82,19 +92,19 @@
 }
 
 .application-form__form-input {
-  padding: 14px 20px;
+  padding: 13px 20px;
   flex: auto;
-  min-width: 70%;
+  width: 60%;
+  min-width: 160px;
   margin-left: 13px;
   appearance: none;
   -moz-appearance: textfield;
-
   font: inherit;
   line-height: 18px;
   color: @dark-gray;
   text-transform: uppercase;
-
   border: 1px solid @gray-5;
+
 
   @media (min-width: @tablet-width) {
     padding: 11px 20px;
@@ -141,10 +151,12 @@
 
   &--contacts {
     margin-left: 10px;
-    padding: 14px 50px 14px 15px;
+    padding: 13px 40px 12px 15px;
+
     @media (min-width: @tablet-width) {
       margin-left: 20px;
       padding-right: 56px;
+      padding-left: 20px;
 
       &:focus + .application-form__form-input-icon,
       &:active + .application-form__form-input-icon {
@@ -188,8 +200,7 @@
   height: 100%;
   gap: 13px;
   margin: 0;
-  padding-top: 22px;
-  padding-bottom: 19px;
+  padding: 22px 0 19px;
 
   border: none;
   @media (min-width: @tablet-width) {
@@ -267,7 +278,7 @@
 .application-form__contacts {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 14px;
   margin-bottom: 24px;
 
   border: none;
@@ -286,6 +297,10 @@
 .application-form__comment {
   margin-bottom: 24px;
 
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+
   @media (min-width: @desktop-width) {
     .grid-desktop;
   }
@@ -294,15 +309,22 @@
 .application-form__title-wrapper {
   grid-column: 1 / -1;
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 76px;
+    margin-bottom: 58px;
+  }
+
+  &--comment {
+    margin-bottom: 35px;
+    @media (min-width: @tablet-width) {
+      margin-bottom: 74px;
+    }
   }
 
   &--checkbox {
     @media (min-width: @tablet-width) {
-      margin-bottom: 54px;
+      margin-bottom: 24px;
       grid-column: 1 / -1;
     }
   }
@@ -362,7 +384,6 @@
     grid-column: 1 / -1;
   }
 
-  /*состояния, как у текстовых инпутов*/
   &:hover {
     border-color: @gray-5;
     outline: none;
@@ -385,7 +406,7 @@
   margin-bottom: 34px;
   border: none;
   @media (min-width: @tablet-width) {
-    padding-bottom: 54px;
+    margin-bottom: 54px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 32px 64px;
@@ -393,6 +414,7 @@
 
   @media (min-width: @desktop-width) {
     .grid-desktop;
+    margin-bottom: 62px;
   }
 }
 
@@ -449,7 +471,6 @@
     border-color: @gray-9;
   }
 
-  /* это тоже на моё усмотрения стиль*/
   &:active + .application-form__checkbox-control-mark {
     border-color: @green;
   }
@@ -460,11 +481,21 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 64px;
+    margin-bottom: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    gap: 80px;
+    margin-bottom: 54px;
   }
 }
 
 .application-form__button {
   width: 100%;
+
+  @media(max-width: @mobile-width-only) {
+    margin-bottom: 21px;
+  }
 }
 
 .application-form__note {
@@ -478,6 +509,7 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    padding-top: 14px;
     font-size: 16px;
     text-align: left;
   }
