--- a/source/less/blocks/approaches.less
+++ b/source/less/blocks/approaches.less
@@ -16,20 +16,19 @@
   position: relative;
   flex-direction: column;
   margin-bottom: 20px;
-  padding: 24px 33px 23px 20px;
+  padding: 28px 33px 23px 20px;
   min-width: 280px;
-
   background-color: @light-gray;
 
   @media (min-width: @tablet-width) {
-    padding: 77px 62px 53px 52px;
+    padding: 77px 62px 57px 52px;
     margin-bottom: 30px;
   }
 
   @media (min-width: @desktop-width) {
     flex-grow: 1;
     min-width: 570px;
-    padding: 77px 67px 55px 52px;
+    padding: 77px 64px 55px 52px;
     margin-bottom: 71px;
   }
 
@@ -57,9 +56,9 @@
     left: 13px;
 
     @media (min-width: @tablet-width) {
-      background-size: auto  200px;
+      background-size: contain;
       width: 268px;
-      height: 200px;
+      height: 211px;
       top: auto;
       left: auto;
       right: 28px;
@@ -80,10 +79,9 @@
 
 .approaches__title {
   margin: 0;
-  margin-bottom: 29px;
+  margin-bottom: 30px;
   margin-left: 71px;
   padding: 0;
-
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -95,7 +93,6 @@
     max-width: 340px;
     margin-bottom: 24px;
     margin-left: 0;
-
     font-size: 36px;
     line-height: 36px;
   }
@@ -112,17 +109,16 @@
   margin-bottom: 23px;
 
   @media (min-width: @tablet-width) {
-    width: 50%;
+    width: 57%;
     min-height: 82px;
-    margin-bottom: 48px;
-
+    margin-bottom: 34px;
     font-size: 16px;
     line-height: 24px;
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    margin-bottom: 23px;
+    margin-bottom: 18px;
   }
 }
 
@@ -130,11 +126,6 @@
   border-top: 1px solid @gray;
 
   @media (min-width: @tablet-width) {
-    max-width: 340px;
-
-    font-size: 20px;
-    line-height: 30px;
-
     border-top: none;
   }
 }
