--- a/source/less/blocks/before-after.less
+++ b/source/less/blocks/before-after.less
@@ -1,5 +1,4 @@
 .before-after {
-  margin: 0 auto;
   width: 280px;
   height: 256px;
   position: relative;
@@ -31,6 +30,7 @@
 .before-after__image-before {
   width: 280px;
   height: 256px;
+  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -43,6 +43,7 @@
 .before-after__image-after {
   width: 280px;
   height: 256px;
+  object-fit: cover;
   position: absolute;
   top: 0;
   right: 0;
@@ -77,12 +78,12 @@
 
 .before-after__toggle-button {
   display: block;
-  padding: 20px;
-  width: 40px;
-  height: 40px;
+  padding: 18px;
+  width: 36px;
+  height: 36px;
   position: relative;
   background-color: @white;
-  border: 2px solid @gray-6;
+  border: 3px solid @gray-6;
   border-radius: 50%;
   cursor: pointer;
   transform: translateX(-50%);
@@ -92,18 +93,18 @@
     content: "";
     .triangle(left; 9px; @gray-6);
     position: absolute;
-    top: 11px;
-    left: 8px;
-    bottom: 11px;
+    top: 9px;
+    left: 5px;
+    bottom: 9px;
   }
 
   &::after {
     content: "";
     .triangle(right; 9px; @gray-6);
     position: absolute;
-    top: 11px;
-    right: 8px;
-    bottom: 11px;
+    top: 9px;
+    right: 5px;
+    bottom: 9px;
   }
 
   &:hover,
