--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,6 @@
 .button {
   display: block;
-  padding: 7px 26px;
+  padding: 10px 26px;
 
   text-decoration: none;
   font-family: "Oswald", "Arial", sans-serif;
@@ -17,6 +17,30 @@
 
   cursor: pointer;
 
+  @media(min-width: @tablet-width) {
+    padding: 10px 26px;
+  }
+
+  &--index {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 10px 26px;
+
+    @media(min-width: @tablet-width) {
+      padding: 17px 26px;
+      font-size: 20px;
+      line-height: 20px;
+    }
+  }
+
+  &--form {
+    @media(min-width: @tablet-width) {
+      padding: 14px 26px;
+      font-size: 20px;
+      line-height: 20px;
+    }
+  }
+
   &:hover,
   &:focus {
     background-color: @green-2;
@@ -25,9 +49,5 @@
   &:active {
     background-color: @green-2;
     color: rgba(@white, 30%);
-  }
-
-  @media (min-width: @tablet-width) {
-    padding: 14px 26px;
   }
 }
