--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -17,23 +17,24 @@
 }
 
 .location__wrapper {
-  padding-top: 26px;
+  padding-top: 27px;
   padding-bottom: 26px;
   display: flex;
-  justify-content: space-between;
 
   background-color: @light-gray;
   &--index {
     background-color: @white;
   }
   @media (min-width: @tablet-width) {
-    padding: 56px 70px;
+    padding: 56px 70px 50px;
+    align-items: center;
   }
 
   @media (min-width: @desktop-width) {
+    align-items: flex-start;
     position: relative;
     z-index: 2;
-    padding: 56px 80px;
+    padding: 56px 112px 41px 80px;
     width: 565px;
     margin: 0;
     margin-right: auto;
@@ -51,10 +52,11 @@
   color: @black;
   text-transform: uppercase;
   max-width: 139px;
+  display: block;
 
   @media (min-width: @tablet-width) {
     width: 25%;
-    max-width: auto;
+    max-width: 100%;
     font-size: 20px;
     line-height: 26px;
   }
@@ -66,16 +68,18 @@
 
 .location__address {
   max-width: 139px;
+  margin-left: auto;
+  display: block;
 
   @media (min-width: @tablet-width) {
     width: 25%;
-    max-width: auto;
+    max-width: 100%;
     font-size: 16px;
     line-height: 20px;
   }
 
   @media (min-width: @desktop-width) {
-    flex-grow: 1;
+    width: 33%;
   }
 }
 
@@ -84,6 +88,10 @@
   border: none;
   margin: 0 auto;
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    height: 400px;
+  }
 
   @media (min-width: @desktop-width) {
     z-index: 1;
@@ -95,3 +103,4 @@
     right: 0;
   }
 }
+
