--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -1,11 +1,16 @@
 .main-products {
   .container;
-  @media (max-width: (@tablet-width - 1px)) {
+  @media (max-width: (@mobile-width-only)) {
+    margin-bottom: 24px;
     padding: 0;
   }
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 68px;
+    margin-bottom: 64px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 74px;
   }
 }
 
