--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -47,6 +47,8 @@
 }
 
 .page-footer__logo-cat-energy-image {
+  width: 128px;
+  height: 24px;
   display: block;
   margin: 0 auto;
 }
@@ -57,6 +59,7 @@
 
   @media (min-width: @tablet-width) {
     padding: 0;
+    margin-left: 26px;
     border: none;
   }
 }
