--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -1,5 +1,5 @@
 .product-card {
-  padding: 20px;
+  padding: 21px 21px 24px;
   border-top: 1px solid @gray-4;
   display: grid;
   grid-template-columns: 50% 50%;
@@ -9,13 +9,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 36px 39px;
+    padding: 0 39px 38px;
     border: none;
     background-color: @light-gray;
   }
 
-  @media (min-width: @tablet-width) {
-    padding: 0 35px 40px;
+  @media (min-width: @desktop-width) {
+    padding: 0 35px 38px;
     border: none;
   }
 }
@@ -24,12 +24,14 @@
   display: block;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+
   @media (min-width: @tablet-width) {
     margin-top: -73px;
     margin-bottom: 34px;
     width: 168px;
     height: 200px;
   }
+
   @media (min-width: @desktop-width) {
     margin-top: -80px;
     margin-bottom: 46px;
@@ -59,7 +61,11 @@
   grid-row: 1 / 2;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 21px;
+    min-height: 47px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 7px;
     min-height: 47px;
   }
 }
@@ -67,7 +73,7 @@
 .product-card__title {
   display: block;
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 13px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
@@ -85,10 +91,28 @@
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 21px;
+    margin-bottom: 18px;
+  }
+}
+
+.product-card__mobile-wrap {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.product-card__tablet-wrap {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: inline;
   }
 }
 
 .product-card__properties-list {
+  margin: 0;
+  margin-bottom: 22px;
+  padding: 0;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   display: flex;
@@ -102,6 +126,11 @@
     align-self: stretch;
     font-size: 16px;
     line-height: 16px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 95%;
+    align-self: center;
   }
 }
 
