--- a/source/less/blocks/show-more-card.less
+++ b/source/less/blocks/show-more-card.less
@@ -1,6 +1,8 @@
 .show-more-card {
   position: relative;
-  padding:  70px 20px 25px;
+  padding:  82px 20px 25px;
+  border-top: 1px solid @gray-4;
+  border-bottom: 1px solid @gray-4;
 
   @media(min-width: @tablet-width) {
     border: 2px solid @light-gray;
@@ -8,10 +10,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 161px 38px 38px;
+    padding: 161px 39px 38px;
   }
 
-  @media(min-width: @tablet-width) {
+  @media(min-width: @desktop-width) {
     padding: 160px 38px 41px;
   }
 
@@ -21,7 +23,7 @@
     display: block;
     width: 30px;
     height: 2px;
-    top: 40px;
+    top: 42px;
     right: 0;
     left: 0;
     margin: 0 auto;
@@ -39,7 +41,7 @@
     display: block;
     width: 2px;
     height: 30px;
-    top: 25px;
+    top: 27px;
     right: 0;
     left: 0;
     margin: 0 auto;
@@ -65,9 +67,14 @@
   text-align: center;
 
   @media(min-width: @tablet-width) {
+    width: 70%;
     font-size: 20px;
     line-height: 22px;
     margin-bottom: 23px;
+  }
+
+  @media(min-width: @desktop-width) {
+    width: 100%;
   }
 }
 
@@ -80,9 +87,14 @@
   text-align: center;
 
   @media(min-width: @tablet-width) {
+    width: 70%;
     font-size: 16px;
     line-height: 18px;
     margin-bottom: auto;
+  }
+
+  @media(min-width: @desktop-width) {
+    width: 100%;
   }
 }
 
