--- a/source/less/blocks/address-text.less
+++ b/source/less/blocks/address-text.less
@@ -5,6 +5,7 @@
 
 .address-text__paragraph {
   margin: 0;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 1em;
