--- a/source/less/blocks/button-show-more.less
+++ b/source/less/blocks/button-show-more.less
@@ -1,7 +1,6 @@
 .button-show-more {
   display: block;
   padding: 10px 30px;
-
   text-decoration: none;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
@@ -10,12 +9,11 @@
   text-align: center;
   text-transform: uppercase;
   color: @dark-gray;
-
   border: none;
   background-color: @light-gray;
   outline: inherit;
-
   cursor: pointer;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     padding: 10px 26px;
