--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -20,11 +20,12 @@
   padding-top: 27px;
   padding-bottom: 26px;
   display: flex;
-
   background-color: @light-gray;
+
   &--index {
     background-color: @white;
   }
+
   @media (min-width: @tablet-width) {
     padding: 56px 70px 50px;
     align-items: center;
@@ -53,6 +54,7 @@
   text-transform: uppercase;
   max-width: 139px;
   display: block;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     width: 25%;
@@ -103,4 +105,3 @@
     right: 0;
   }
 }
-
