--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -1,14 +1,13 @@
 .main-container__title {
   .title-typical;
-
   padding: 0 20px;
   max-width: @desktop-width;
   margin: 27px auto 40px;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     margin: 34px auto 162px;
     padding: 0 30px;
-
     font-size: 60px;
     line-height: 60px;
   }
