--- a/source/less/blocks/approaches.less
+++ b/source/less/blocks/approaches.less
@@ -7,7 +7,9 @@
 
   @media (min-width: @desktop-width) {
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 80px;
+    margin-bottom: 71px;
   }
 }
 
@@ -26,10 +28,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    flex-grow: 1;
-    min-width: 570px;
+    width: 570px;
     padding: 77px 64px 55px 52px;
-    margin-bottom: 71px;
+    margin-bottom: 0;
   }
 
   &--weight-loss {
@@ -48,7 +49,7 @@
     content: "";
     width: 67px;
     height: 50px;
-    background-size: auto  50px;
+    background-size: auto 50px;
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
@@ -68,7 +69,7 @@
     @media (min-width: @desktop-width) {
       width: 134px;
       height: 100px;
-      background-size: auto  100px;
+      background-size: auto 100px;
       top: 47px;
       left: 33px;
       right: auto;
@@ -88,6 +89,7 @@
   line-height: 37px;
   color: @black;
   text-transform: uppercase;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     max-width: 340px;
@@ -107,6 +109,7 @@
 .approaches__description {
   margin: 0;
   margin-bottom: 23px;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     width: 57%;
