--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -1,7 +1,6 @@
 .banner {
   margin-bottom: 20px;
   position: relative;
-
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -80,13 +79,14 @@
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
-      margin-bottom: 41px;
-       max-width: 420px;
-      text-align: left;
-      font-size: 60px;
-      line-height: 60px;
+    margin-bottom: 41px;
+    max-width: 420px;
+    text-align: left;
+    font-size: 60px;
+    line-height: 60px;
   }
 
   @media (min-width: @desktop-width) {
@@ -99,6 +99,7 @@
   margin-bottom: 30px;
   text-align: center;
   text-transform: uppercase;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 49px;
@@ -113,13 +114,13 @@
   }
 }
 
-.banner__image  {
+.banner__image {
   display: block;
   margin: 0 auto 3px;
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 234px;
+    bottom: 0;
     right: 32px;
     order: 1;
     z-index: -1;
@@ -130,11 +131,12 @@
   @media (min-width: @desktop-width) {
     margin: 0;
     top: 0;
+    bottom: auto;
     right: 330px;
     width: 552px;
     height: auto;
   }
-};
+}
 
 .banner__button {
   @media (min-width: @tablet-width) {
