--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -40,6 +40,7 @@
 
 .live-example__text-wrapper {
   z-index: 1;
+
   @media (min-width: @desktop-width) {
     max-width: 433px;
   }
@@ -48,8 +49,8 @@
 .live-example__title {
   .title-typical;
   line-height: 40px;
-
   margin-bottom: 40px;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -66,10 +67,10 @@
 .live-example__description {
   margin: 0;
   margin-bottom: 20px;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 54px;
-
     font-size: 16px;
     line-height: 24px;
   }
@@ -85,6 +86,7 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 100px;
   }
+
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
   }
@@ -92,7 +94,9 @@
 
 .live-example__slider {
   margin: 0 auto;
+
   @media (min-width: @desktop-width) {
     margin-right: 0;
+    align-self: flex-end;
   }
 }
