--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -1,6 +1,7 @@
 .main-products {
   .container;
-  @media (max-width: (@mobile-width-only)) {
+
+  @media (max-width: @mobile-width-only) {
     margin-bottom: 24px;
     padding: 0;
   }
@@ -16,6 +17,7 @@
 
 .main-products__container {
   display: grid;
+
   @media (min-width: @tablet-width) {
     grid-template-columns: 1fr 1fr;
     gap: 141px 60px;
@@ -26,4 +28,3 @@
     row-gap: 144px;
   }
 }
-
