--- a/source/less/blocks/navigation-list.less
+++ b/source/less/blocks/navigation-list.less
@@ -4,7 +4,6 @@
   margin: 0;
   display: flex;
   flex-direction: column;
-
   border-bottom: 1px solid @gray-2;
 
   @media (min-width: @tablet-width) {
@@ -16,25 +15,24 @@
 
 .navigation-list__item {
   margin: 0;
-
   border-top: 1px solid @gray-2;
 
   @media (min-width: @tablet-width) {
-      margin-left: 37px;
-      border: none;
+    margin-left: 37px;
+    border: none;
   }
 }
 
 .navigation-list__link {
   display: block;
   padding: 23px 60px;
-
   color: inherit;
   text-decoration: none;
   text-align: center;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
-      padding: 18px 0 10px;
+    padding: 18px 0 10px;
   }
 
   @media (min-width: @desktop-width) {
