--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -44,10 +44,12 @@
   display: block;
   width: 140px;
   height: 112px;
+
   @media (min-width: @tablet-width) {
     width: 168px;
     height: 200px;
   }
+
   @media (min-width: @desktop-width) {
     width: 172px;
     height: 196px;
@@ -74,13 +76,13 @@
   display: block;
   margin: 0;
   margin-bottom: 13px;
-
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
   color: @light-black;
   text-transform: uppercase;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -95,13 +97,13 @@
   }
 }
 
-.product-card__mobile-wrap {
+.product-card__mobile-break {
   @media (min-width: @tablet-width) {
     display: none;
   }
 }
 
-.product-card__tablet-wrap {
+.product-card__tablet-break {
   display: none;
 
   @media (min-width: @tablet-width) {
@@ -137,6 +139,7 @@
 .product-card__property-wrapper {
   display: flex;
   justify-content: space-between;
+
   @media (min-width: @tablet-width) {
     padding-top: 7px;
     padding-bottom: 9px;
@@ -147,10 +150,19 @@
 .product-card__property-value {
   margin: 0;
   text-align: right;
+  word-break: break-word;
+  max-width: 45%;
+}
+
+.product-card__property {
+  word-break: break-word;
+  max-width: 45%;
 }
 
 .product-card__button {
   grid-column: 1 / -1;
+  word-break: break-word;
+
   @media (min-width: @tablet-width) {
     margin-top: auto;
     align-self: stretch;
