--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,17 +1,13 @@
 body {
-  margin: 0
+  margin: 0;
 }
-
-//img {
-//  max-width: 100%;
-//  height: auto;
-//  object-fit: contain;
-//}
 
 a {
   text-decoration: none;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
