--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -22,7 +22,7 @@
     display: block;
     height: 63%;
     width: 100%;
-    background-color: @green;
+    background-color: @green-3;
     background-image: url("../img/banner-background.jpg");
     background-position: center;
     background-size: contain;
