--- a/source/less/blocks/link-accent.less
+++ b/source/less/blocks/link-accent.less
@@ -29,6 +29,7 @@
     background-image: url("../img/icon-arrow.svg");
     background-repeat: no-repeat;
     background-position: left;
+    flex-shrink: 0;
 
     @media (min-width: @tablet-width) {
       margin-left: 25px;
