--- a/source/less/blocks/application-form.less
+++ b/source/less/blocks/application-form.less
@@ -94,18 +94,29 @@
 }
 
 .application-form__form-input {
+  all: unset;
   padding: 13px 20px;
   flex: auto;
   width: 60%;
   min-width: 160px;
   margin-left: 13px;
   appearance: none;
+  -moz-appearance: textfield; /* stylelint-disable-line */
+  /* Отключение stylelint: иначе остаются браузерные стили в Firefox*/
   font: inherit;
   line-height: 18px;
   color: @dark-gray;
   text-transform: uppercase;
   border: 1px solid @gray-5;
 
+  /* stylelint-disable */
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  /* stylelint-enable */
+  /* Отключение stylelint: иначе остаются браузерные стили */
 
   @media (min-width: @tablet-width) {
     padding: 11px 20px;
@@ -126,19 +137,18 @@
       font-size: 20px;
       line-height: 30px;
     }
+  }
 
-    &:hover {
-      border-color: @gray-5;
-      outline: none;
-    }
+  &:hover {
+    border-color: @gray-5;
+    outline: none;
+  }
 
-    &:focus,
-    &:active {
-      border: 2px solid @dark-gray;
-      outline: none;
-      box-shadow: none;
-      appearance: none;
-    }
+  &:focus,
+  &:active {
+    border: 2px solid @dark-gray;
+    outline: none;
+    box-shadow: none;
   }
 
   &--error {
